--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="marketApp">
+<html lang="fr">
   <head>
     <title><%= full_title(yield(:title)) %></title>
     <meta charset="utf-8">
@@ -7,74 +7,23 @@
     <meta name="description" content="TchopMyGrinds - Marketplace moderne pour trouvez des vendeurs et produits locaux près de chez vous avec géolocalisation.">
     <meta name="keywords" content="Marketplace, cameroun, e-commerce, géolocalisation, produits locaux">
     
-    <!-- Tailwind CSS en premier (styles principaux) -->
-    <%= stylesheet_link_tag 'builds/tailwind', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <!-- Styles spécifiques de l'application en second -->
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    
-    <!-- Google Fonts pour Tailwind -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-    
-    <!-- Font Awesome pour les icônes -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    
-    <!-- Libraries externes -->
-    <%= stylesheet_link_tag "https://cdnjs.cloudflare.com/ajax/libs/trix/0.9.2/trix.css" %>
-    
-    <!-- Scripts -->
-    <!-- 1. Librairies externes en premier (Angular est chargé via pipeline Sprockets) -->
-    <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.bundle.js" %>
-    <%= javascript_include_tag "https://cdn.jsdelivr.net/angular.chartjs/latest/angular-chart.min.js" %>
-    <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/angular-moment/1.3.0/angular-moment.js" %>
-    <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/angular-moment/1.3.0/angular-moment.min.js" %>
-    <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.17/angular-filter.min.js" %>
-    <%= javascript_include_tag "https://cdn.jsdelivr.net/angular.chartjs/latest/angular-chart.min.js" %>
-    <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/trix/1.3.1/trix.js" %>
-    
-    <!-- 2. Application principale avec tous les services inclus -->
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <!-- Basic CSS for non-React pages only -->
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbo-track': 'reload' %>
     
     <%= csrf_meta_tags %>
-    <%= render 'layouts/shim' %>
-    
-    <!-- Alpine.js pour interactions simples -->
-    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+    <%= csp_meta_tag %>
   </head>
-  <body class="bg-gray-50 font-body antialiased" data-tailwind-ready="true">
-    <!-- Flash messages avec Tailwind -->
+  <body>
+    <!-- Flash messages -->
     <% flash.each do |key, value| %>
-      <div class="fixed top-4 right-4 z-50 max-w-md animate-slide-up" x-data="{ show: true }" x-show="show" x-transition>
-        <div class="alert <%= 'alert-success' if key == 'notice' %>
-                          <%= 'alert-danger' if key == 'alert' %>
-                          <%= 'alert-warning' if key == 'warning' %>
-                          <%= 'alert-info' if key == 'info' %>">
-          <div class="flex items-start justify-between">
-            <div class="flex-1">
-              <%= value %>
-            </div>
-            <button @click="show = false" class="ml-4 text-gray-400 hover:text-gray-600">
-              <i class="fas fa-times"></i>
-            </button>
-          </div>
-        </div>
+      <div class="flash-message <%= key %>">
+        <%= value %>
       </div>
     <% end %>
-    
-    <!-- Système de notifications AngularJS -->
-    <notification-container position="top-right"></notification-container>
     
     <!-- Contenu principal -->
-    <main class="w-full">
+    <main>
       <%= yield %>
     </main>
-    
-    <% if Rails.env.development? %>
-      <!-- Debug info en développement -->
-      <div class="fixed bottom-4 left-4 bg-gray-800 text-white text-xs p-2 rounded opacity-75 z-40">
-        <%= debug(params) if params.present? %>
-      </div>
-    <% end %>
   </body>
 </html>
